--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 			<td>création repos github</td>
 			<tr/>
 				<tr>
-
+					<td>ajout repos github</td>
+				</tr>
+				<td>git remote add origin url</td>
 
 
 
