--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>git cheat sheet</title>
   </head>
   <body>
-	<h1>commande pour github</h1>
+
+    img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png">
+	  <h1>commande pour github</h1>
 
 	<table>
 		<tr>
@@ -36,6 +38,5 @@
 
 
 
-    <img src="images/firefox-icon.png" alt="Mon image de test">
   </body>
 </html>
