--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png">
+   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png">
 	  <h1>commande pour github</h1>
 
 	<table>
@@ -18,13 +18,13 @@
 			<td>git init</td>
 		</tr>
 		<tr>
-			<td>git.status</tr>
+			<td>git.status</td>
 		</tr>
 		<tr>
 			<td>touch nomfichier</td>
 		</tr>
 		<tr>
-			<td>git add.</tr>
+			<td>git add.</td>
 		<tr> 
 			<td>git commit -m "fristcommit"</td>
 		</tr>
@@ -35,7 +35,7 @@
 					<td>ajout repos github</td>
 				</tr>
 				<td>git remote add origin url</td>
-
+			</tr>
 	</table>
 
   </body>
