--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <body>
 
    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/320px-Git-logo.svg.png">
+	<header>
 	  <h1>commande pour github</h1>
+	  <nav><nav><a href="contact.html">contact</a>
+			  <main>
 
 	<table>
 		<tr>
@@ -39,6 +42,9 @@
 				<td>git remote add origin url</td>
 			</tr>
 	</table>
-
+			  </main>
+<footer>
+<a href="https://twitter.com/hocine05780334">twitter</a>
+</footer>
   </body>
 </html>
